--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:local": "vue-cli-service serve --dotenv .env.local",
     "build": "vue-cli-service build",
+    "build:local": "vue-cli-service --dotenv .env.local",
     "lint": "vue-cli-service lint",
     "fake-api": "json-server-auth db.json"
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.0-beta.0",
+    "axios": "^0.24.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-inline-svg": "^2.1.0",
+    "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.177",
+    "@types/vue-the-mask": "^0.11.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
