--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+// prettier-ignore
 {
   "compilerOptions": {
     "target": "esnext",
@@ -34,6 +35,7 @@
       "@components/*"  : [ "./src/components/*"  ],
       "@composition/*" : [ "./src/composition/*" ],
       "@services/*"    : [ "./src/services/*"    ],
+      "@dto/*"         : [ "./src/dto/*"         ],
     },
     "lib": [
       "esnext",
