another big ugly commit

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HTTP=TEST_HTTP
-HTTPS=TEST_HTTPS
-API=TEST_API
+HTTP=https://tranquil-bayou-55359.herokuapp.com/
+HTTPS=https://tranquil-bayou-55359.herokuapp.com/
+API=https://tranquil-bayou-55359.herokuapp.com/
