--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:local": "vue-cli-service serve --dotenv .env.local",
     "build": "vue-cli-service build",
-    "build:local": "vue-cli-service --dotenv .env.local",
-    "lint": "vue-cli-service lint",
-    "fake-api": "json-server-auth db.json"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.0-beta.0",
