--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
+    "vue-bootstrap-typeahead": "^0.2.6",
     "vue-inline-svg": "^2.1.0",
     "vue-router": "^3.2.0",
     "vue-the-mask": "^0.11.1"
