--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-bootstrap-typeahead": "^0.2.6",
+    "vue-fullpage-modal": "^0.5.3",
     "vue-inline-svg": "^2.1.0",
     "vue-router": "^3.2.0",
     "vue-the-mask": "^0.11.1"
