--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
+    "@quintet/vue-quintable": "^1.2.7",
     "@vue/composition-api": "^1.4.0-beta.0",
     "axios": "^0.24.0",
     "bootstrap-vue": "^2.21.2",
+    "chance": "^1.1.8",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
