--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-fullpage-modal": "^0.5.3",
